usecase-3/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mysql-database
  namespace: database

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql
      role: database

  template:
    metadata:
      labels:
        app: mysql
        role: database
    spec:
      containers:
      - name: database-coba
        image: mysql:8.0
        ports:
        - containerPort: 3306
