usecase-3/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mysql-service
  namespace: database

spec:
  selector:
    app: mysql
    role: database

  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
