usecase-3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: db-admin-ingress
  namespace: database
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - host: "dbadmin.company.local"
    http:
      paths:
      - path: "/"
        pathType: Exact
        backend:
          service:
            name: mysql-service
            port:
              number: 3306
